# KOSMOS

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.aimock.yml  docker-compose.dev.yml  install.sh  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  vulture_whitelist.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: api_adapter.yml  bug_report.yml  config.yml  feature_request.yml  plugin_submission.yml
.github/workflows/: auto-merge.yml  cc-byte-identical-guard.yml  ci.yml  claude-review.yml  copilot-gate.yml  dependabot-auto-merge.yml  deploy-live-gateway.yml  docs.yml  eval.yml  package-npm.yml  plugin-validation.yml  pr-lint.yml  publish-homebrew-cask-artifacts.yml  publish-homebrew.yml  publish-npm.yml  release-manifest.yml  sbom.yml  security.yml  shadow-eval.yml  tui-attribution-gate.yml  tui-ipc-drift.yml  tui-smoke.yml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
Casks/: ummaya.rb
Formula/: kosax.rb  ummaya.rb
assets/: ummaya-demo.txt
docker/: Dockerfile
docs/: adapter-authoring.md  configuration.md  conventions.md  copilot-gate.md  live-adapter-gateway.md  observability.md  packaging.md  phase1-acceptance.md  presentation.md  release-checklist.md  release-packaging-plan.md  testing.md  tool-adapters.md  vision.md
docs-site/: astro.config.mjs
docs/adr/: ADR-001-geocoding-provider.md  ADR-002-bm25-retrieval-gate.md  ADR-003-bun-ink-react-tui-stack.md  ADR-004-claude-code-sourcemap-port.md  ADR-005-korean-ime-strategy.md  ADR-006-cc-migration-vision-update.md  ADR-007-plugin-tool-id-namespace.md  ADR-008-plugin-store-org-and-vendored-slsa-verifier.md  ADR-009-mcpb-compat-lazy-shim.md  ADR-009-secureStorage-drop.md
docs/api/: README.md  kftc-openapi-56-section-debug-report.md  kftc-openapi-endpoint-inventory.md  kftc-openapi-portfolio.md
docs/decisions/: fork-command-decision.md
docs/deferred/: 032-ipc-stdio-hardening.md
docs/demo/: README.md  drive-readme-demo-gui.sh  readme_scenario_backend.py  record-readme-demo-session.sh  record-readme-demo.sh  run-readme-demo.sh  ummaya-readme.tape
docs/design/: brand-system.md  contrast-measurements.md  mvp-tools.md  retrieval.md
docs/onboarding/: codex-continuation.md  five-primitive-harness.md
docs/plugins/: README.md  architecture.md  data-go-kr.md  live-vs-mock.md  permission-tier.md  pydantic-schema.md  quickstart.ko.md  review-checklist.md  search-hint.md  security-review.md  testing.md
docs/release/: homebrew-official-readiness.md
docs/release-notes/: epic-467.md  package-release-template.md
docs/requirements/: epic-p0-baseline.md  epic-p1-p2-llm.md  epic-p3-tool-system.md  epic-p4-ui-impl.md  epic-p5-plugin-dx.md  epic-p6-docs-smoke.md  kosax-migration-tree.md  kosmos-migration-tree.md  ummaya-migration-tree.md
docs/research/: codex-llm-quality-setup.md  infrastructure-survey-submit.md  infrastructure-survey-subscribe.md  infrastructure-survey-verify.md  policy-mapping.md  release-packaging-deep-research.md  system-prompt-harness-comparison.md  tool-system-migration-plan.md
docs/scenarios/: README.md  gov24-minwon-submit.md  gov24_submission.md  hometax-tax-filing.md  kec_xml_signature.md  (+4 more)
eval/: retrieval_queries.yaml  retrieval_queries_adversarial.yaml
examples/plugin-template-staging/: .gitignore  README.en.md  README.ko.md  README.staging.md  manifest.yaml  pyproject.toml
examples/plugin-template-staging/.github/workflows/: plugin-validation.yml  release-with-slsa.yml
examples/plugin-template-staging/plugin_my_plugin/: __init__.py  adapter.py  schema.py
examples/plugin-template-staging/tests/: conftest.py  test_adapter.py
examples/plugin-template-staging/tests/fixtures/: plugin.my_plugin.lookup.json
prompts/: TEMPLATE-wave-leader.md  cicd-setup-leader.md  compact_v1.md  manifest.yaml  phase1-roadmap-leader.md  session_guidance_v1.md  system_v1.md  wave2-leader.md  wave3-leader.md  wave4-leader.md
research/: README.md
scripts/: aimock-bun.ts  audit-env-registry.py  audit-secrets.sh  bootstrap_slsa_verifier.sh  build-homebrew-cask-artifact.mjs  build_schemas.py  bun-pty-capture.ts  cast_to_frames.py  cc_byte_identical_guard.py  check-npm-package.mjs  compute-contrast.mjs  llm_swap_parity_audit.sh  probe-bridge.py  pty-scenario.py  regenerate_catalog.py  render-homebrew-cask.mjs  render-homebrew-formula.mjs  render_checklist.py  safety_sc004_measure.py  safety_sc006_measure.py  sync_readme_env.py  tui-realuse-audit.py  tui-realuse-matrix.py  tui-text-debug.sh  tui-tmux-capture.sh
tests/: conftest.py  test_mock_scenario_split.py  test_no_opaque_mock_adapter.py  test_smoke.py
tui/: .gitignore  NOTICE  README.md  bunfig.toml  package.json  tsconfig.json  tsconfig.typecheck.json
(+4963 files in other folders)
