[project]
name = "kosmos"
version = "0.1.0"
description = "Conversational multi-agent platform for Korean public APIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "umyunsang" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-semantic-conventions>=0.46b0",
    "rank-bm25>=0.2.2",
    "kiwipiepy>=0.17",
]

[project.scripts]
kosmos = "kosmos.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5",
    "respx>=0.23.1",
    "hypothesis[pydantic]>=6.100",
    "mypy>=1.20.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "pip-audit>=2.10.0",
    "vulture>=2.16",
    "pip-licenses>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kosmos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -q --tb=short"
markers = [
    "live: hits real data.go.kr APIs — skipped in CI (deselect with -m 'not live')",
    "performance: timing assertions against perf budgets — opt-out via KOSMOS_SKIP_PERF=1",
]
filterwarnings = [
    "error",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]

[tool.coverage.run]
source = ["src/kosmos"]
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (catches print() calls)
    "SIM",  # flake8-simplify
    "C90",  # mccabe complexity
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # allow assert and hardcoded test passwords
"src/kosmos/cli/**" = ["T20"]  # allow print() in CLI layer only

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["kosmos"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.vulture]
paths = ["src", "vulture_whitelist.py"]
min_confidence = 80

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5",
    "respx>=0.23.1",
    "hypothesis[pydantic]>=6.100",
    "mypy>=1.20.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "pip-audit>=2.10.0",
    "vulture>=2.16",
    "pip-licenses>=5.0",
]
