[project]
name = "kosmos-plugin-my_plugin"
version = "0.1.0"
description = "KOSMOS plugin scaffolded by 'uvx kosmos-plugin-init'"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.13",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
