[project]
name = "ummaya-plugin-my_plugin"
version = "0.1.0"
description = "UMMAYA plugin scaffolded by 'uvx ummaya-plugin-init'"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.13",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugin_my_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
